Fix whitespace breakages introduced by new sidebar branch menu

--- a/resources/assets/css/inner/aside.less
+++ b/resources/assets/css/inner/aside.less
@@ -662,7 +662,7 @@
 }
 
 .ui-v2 {
-  .app-aside {
+  .app-aside:not(.menuless) {
     margin-right: 15px;
   }
 
