--- a/resources/assets/css/inner/builds.less
+++ b/resources/assets/css/inner/builds.less
@@ -105,7 +105,7 @@
   }
 }
 
-.ui-v1 {
+&.ui-v1 {
   .build-head {
     margin: 0;
     section {
@@ -163,9 +163,7 @@
       }
     }
   }
-}
 
-&.ui-v1 {
   .sub-head-content {
     padding-top: 1em;
     padding-left: 1em;
@@ -173,6 +171,16 @@
 
     pre, p {
       margin: 0;
+    }
+  }
+
+  .build-tests-list {
+    .filename {
+      &:not(:first-child) {
+        padding-top: 1em;
+      }
+
+      margin-left: -2em;
     }
   }
 }
@@ -323,17 +331,6 @@
   }
   ol {
     margin: 0 2em;
-  }
-}
-
-.ui-v1 {
-  .build-tests-list {
-    .filename {
-      &:not(:first-child) {
-        padding-top: 1em;
-      }
-      margin-left: -2em;
-    }
   }
 }
 
